--- a/ubento-machine/Vagrantfile
+++ b/ubento-machine/Vagrantfile
@@ -9,9 +9,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision "ansible" do |ansible|
     ansible.version = "12.0.0"
     ansible.playbook = "provisioning/playbook.yml"
+    ansible.vault_password_file = "./provisioning/.vault_key.txt"
     ansible.extra_vars = {
-      'ansible_python_interpreter': '/usr/bin/python3.10',
-      gitlab_runner_registration_token: ENV['GITLAB_TOKEN']
+      'ansible_python_interpreter': '/usr/bin/python3.10'
     }
   end
 end
