--- a/ubento-machine/provisioning/playbook.yml
+++ b/ubento-machine/provisioning/playbook.yml
@@ -1,11 +1,14 @@
 ---
 - hosts: all
   become: true
-  tasks:
-    - name: Install and configure Docker
-      include_tasks: tasks/docker.yml
+  vars_files:
+  - ./secrets.yml
+
+  roles:
+    - role: geerlingguy.docker
       tags: docker
 
+  tasks:
     - name: Install and configure GitLab Runner
       include_tasks: tasks/gitlab-runner.yml
       tags: gitlab-runner
