refactor(ansible): migrate GitLab Runner to galaxy role
- Replace manual gitlab-runner installation with riemers.gitlab-runner
role
- Update requirements.yml to include riemers.gitlab-runner v2.0.12
- Remove custom tasks/gitlab-runner.yml file
- Configure gitlab-runner role variables to match previous setup
- Maintain same runner configuration (docker, gitlab.com, ref_protected)

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -8,8 +8,15 @@
   roles:
     - role: geerlingguy.docker
       tags: docker
-
-  tasks:
-    - name: Install and configure GitLab Runner
-      ansible.builtin.include_tasks: tasks/gitlab-runner.yml
+    - role: riemers.gitlab-runner
       tags: gitlab-runner
+      vars:
+        gitlab_runner_registration_token_type: "registration-token"
+        gitlab_runner_coordinator_url: "https://gitlab.com/"
+        gitlab_runner_runners:
+          - name: "docker-runner"
+            executor: "docker"
+            docker_image: "alpine:latest"
+            run_untagged: false
+            locked: true
+            access_level: "ref_protected"
